# oxyn-command-saas

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 1ce1d41b45a2_initial_schema.py
app/: __init__.py  audit.py  config.py  db.py  dependencies.py  errors.py  logging_config.py  main.py  models.py  rate_limit.py  schemas.py  security.py
app/routers/: alerts.py  auth.py  dashboard.py  hospitals.py  safety.py  shifts.py  users.py
docs/superpowers/plans/: 2026-07-11-oxyn-hardening.md
docs/superpowers/specs/: 2026-07-11-oxyn-hardening-design.md
scripts/: bootstrap.py
tests/: conftest.py  test_alerts.py  test_api.py  test_auth.py  test_errors.py  test_models.py  test_observability.py  test_permissions.py  test_rooms.py  test_shifts.py
