[project]
name = "oxyn-saas"
version = "0.1.0"
description = "Backend multi-tenant do OXYN Command"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.34,<1",
  "sqlalchemy>=2.0,<3",
  "psycopg[binary]>=3.2,<4",
  "alembic>=1.14,<2",
  "pydantic-settings>=2.7,<3",
  "pyjwt>=2.10,<3",
  "pwdlib[argon2]>=0.2,<1",
  "python-multipart>=0.0.20,<1",
  "email-validator>=2.2,<3",
]

[project.optional-dependencies]
dev = ["pytest>=8.3,<9", "pytest-cov>=6,<7", "httpx>=0.28,<1", "ruff>=0.9,<1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
